--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="https://picsum.photos/">Lorem Pictum</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://yandex.ru/">Yandex</a>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control mr-2" type="search" placeholder="Search" aria-label="Search">
