--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>О нас</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <div class="container">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Другие сайты</a>
+              <a class="navbar-brand" href="index.html">Другие сайты</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -62,24 +63,33 @@
         <div class="row">
 
             <div class="col-8">
-                <div class="mb-3">
-                    <label for="name" class="form-label">Наше имя</label>
-                    <input type="text" class="form-control" id="name" placeholder="Введите имя" name="name">
-                </div>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Наше имя</label>
-                    <input type="text" class="form-control" id="name" placeholder="Введите имя" name="name">
-                </div>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Наше имя</label>
-                    <input type="text" class="form-control" id="name" placeholder="Введите имя" name="name">
-                </div>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Наше имя</label>
-                    <input type="text" class="form-control" id="name" placeholder="Введите имя" name="name">
-                </div>
-                
-            </div>
+                <!-- //action="http://vdubov.simtechdev.us/emailsend/public/send-mail" 
+                //method="get" -->
+                <form 
+                    onsubmit="отправитьПисьмо(event)"
+               
+                    >
+
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Наше имя</label>
+                        <input type="text" class="form-control" id="name" placeholder="Введите имя" name="name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="subject" class="form-label">Наша тема</label>
+                        <input type="text" class="form-control" id="subject" placeholder="Введите тему" name="subject">
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Наше сообщение</label>
+                        <input type="text" class="form-control" id="message" placeholder="Введите сообщение" name="message">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Наша почта</label>
+                        <input type="email" class="form-control" id="email" placeholder="Введите почту" name="email">
+                    </div>
+
+                    <button type="submit" class="btn btn-secondary">Отправить</button>
+                </form>
+        </div>
 
             <div class="col-4">
                 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A40e660d58355734789e65452153025378b2b8cd572503ef6c8f698f30e63da44&amp;width=320&amp;height=240&amp;lang=ru_RU&amp;scroll=true"></script>
@@ -106,6 +116,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous">
     </script>
+
+    <script>
+
+        function отправитьПисьмо(event) {
+            event.preventDefault()
+            alert("Письмо отправлено (или нет)")
+
+            let name = document.querySelector("#name").value;
+            let subject = document.querySelector("#subject").value;
+            let message = document.querySelector("#message").value;
+            let email = document.querySelector("#email").value;
+        }
+
+    </script>
+
 </body>
 
 </html>
