--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Window</title>
-  < <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+  <title>Сайт</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 
@@ -14,7 +14,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Sites</a>
+          <a class="navbar-brand" href="index.html">Другие сайты</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,6 +42,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://yandex.ru/">Yandex</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">О нас</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -85,7 +88,11 @@
     <div class="container">
       <div class="row">
         <div class="col-8">
-          <h1>This is site.</h1>
+          <h1>Это сайт.</h1>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Введите текст</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
         </div>
         <div class="col-4">
           <img
@@ -105,9 +112,8 @@
                     <div class="card" style="width: 18rem;">
                         <img src="img/tsveti.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Lorem, ipsum dolor.</h5>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, cupiditate.
-                                of the card's content.</p>
+                            <h5 class="card-title">Картинка</h5>
+                            <p class="card-text">Это картинка.</p>
                             <a href="#" class="btn btn-primary">Купить</a>
                         </div>
                     </div>
@@ -116,8 +122,8 @@
                     <div class="card" style="width: 18rem;">
                         <img src="img/tuman.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Lorem ipsum dolor sit.</h5>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, unde odit. Quae, autem reiciendis?</p>
+                            <h5 class="card-title">Картинка</h5>
+                            <p class="card-text">Это картинка.</p>
                             <a href="#" class="btn btn-primary">Купить</a>
                         </div>
                     </div>
@@ -126,8 +132,8 @@
                     <div class="card" style="width: 18rem;">
                         <img src="img/vinograd.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Lorem ipsum dolor sit1231.</h5>
-                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto voluptatibus .</p>
+                            <h5 class="card-title">Картинка</h5>
+                            <p class="card-text">Это картинка.</p>
                             <a href="#" class="btn btn-primary">Купить</a>
                         </div>
                     </div>
