--- a/about.html
+++ b/about.html
@@ -63,8 +63,8 @@
         <div class="row">
 
             <div class="col-8">
-                <!-- //action="http://vdubov.simtechdev.us/emailsend/public/send-mail" 
-                //method="get" -->
+                <!-- action="http://vdubov.simtechdev.us/emailsend/public/send-mail" 
+                method="get" -->
                 <form 
                     onsubmit="отправитьПисьмо(event)"
                
